@@ -1,4 +1,7 @@
 
+=== (next) ===
+FIXED: check failure when "boolean" is used in type variant
+
 === 1.4.0 (2017-08-18) ===
 NEW: FTN7 v1.6 support
 
